force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <description>Stores loan application decision information</description>
    <label>Decision</label>
    <nameField>
        <displayFormat>DEC-{0000000}</displayFormat>
        <label>Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>