force-app/main/default/objects/Decision__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Approved loan amount</description>
    <inlineHelpText>Enter the approved loan amount (if approved)</inlineHelpText>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>