force-app/main/default/objects/Decision__c/fields/Approved_Rate__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rate__c</fullName>
    <description>Approved interest rate</description>
    <inlineHelpText>Enter the approved interest rate as a percentage</inlineHelpText>
    <label>Approved Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>