force-app/main/default/objects/Decision__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date and time when the decision was made</description>
    <inlineHelpText>Enter the date and time when this decision was made</inlineHelpText>
    <label>Decision Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>