force-app/main/default/objects/Decision__c/fields/Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Codes__c</fullName>
    <description>Reason codes for the decision</description>
    <inlineHelpText>Enter the reason codes that influenced this decision</inlineHelpText>
    <label>Reason Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>