force-app/main/default/objects/Decision__c/validationRules/Approval_Amount_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Amount_Logic</fullName>
    <active>true</active>
    <description>Requires approved amount when outcome is Approved</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Outcome__c, "Approved"),
    OR(
        ISBLANK(Approved_Amount__c),
        Approved_Amount__c &lt;= 0
    )
)</errorConditionFormula>
    <errorDisplayField>Approved_Amount__c</errorDisplayField>
    <errorMessage>Approved amount is required and must be greater than $0 when outcome is Approved</errorMessage>
</ValidationRule>