force-app/main/default/objects/Decision__c/validationRules/Approval_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Rate_Required</fullName>
    <active>true</active>
    <description>Requires approved rate when outcome is Approved</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Outcome__c, "Approved"),
    ISBLANK(Approved_Rate__c)
)</errorConditionFormula>
    <errorDisplayField>Approved_Rate__c</errorDisplayField>
    <errorMessage>Approved interest rate is required when outcome is Approved</errorMessage>
</ValidationRule>