force-app/main/default/objects/Decision__c/validationRules/Decision_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures decision date cannot be in the future</description>
    <errorConditionFormula>Decision_Date__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Decision date cannot be in the future</errorMessage>
</ValidationRule>