force-app/main/default/objects/Decision__c/validationRules/Reason_Code_Required_If_Declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Code_Required_If_Declined</fullName>
    <active>true</active>
    <description>Requires reason codes when outcome is Declined</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Outcome__c, "Declined"),
    ISBLANK(Reason_Codes__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_Codes__c</errorDisplayField>
    <errorMessage>Reason codes are required when outcome is Declined</errorMessage>
</ValidationRule>